﻿$Rev$
[2007/08/24]
Editor.py           Add Ctrl+Insret => Copy, and add Ctrl+C, Ctrl+X, Ctrl+Y to
                    Editor.py I don't if it'll fix the problem in linux
mView.py            Change long line indicator default is true.
InputAssistant.py SnipMixin.py mInputAssistant.py
                    Fix snippet template indent bug(when using tab mode, the '\t'
                    in template will be replaced with spaces). And you can press
                    ESC to cancel current snippet.
SvnSupport.py mVersionControl.py mRun.py Entry.py
                    Add simple SVN support, and also many things need to finish.
                    
[2007/08/23]
UliPad.py           Now you can set pythonpath option in config.ini/[default], 
                    and ulipad will insert it into the sys.path. pythonpath can 
                    be a string or a string list of directory.
                    
mDebug.py packages  Move winpdb package from modules to packages, fix setup
                    file bug and change the winpdb invoke
Print.py            Fix print margin
                    
[2007/08/22]
Editor.py           Add Shift+Delete => Cut, Shift+Insert => Paste
mPyRun.py           Add new option in preference, [Python]->Automatically save modified file when running python program, if it's checked, it'll automatically save the modified file.
common.py LexerBase.py Fix print bug
mPrint.py Print.py  Fix print bug, add print line number functionality

[2007/08/21]
mako_plugin         Add mako template syntax highlight support

-------------------------------------- 3.7 -----------------------------
[2007/08/19]
                    Ready to release new version
                    
[2007/08/09]
mRegister.py        Fix register to explore bug

[2007/08/08]
                    Fix document NewEdit->UliPad
mFormat.py          Add Tab and Shift+Tab to menu item
winpdb module       Merge new 1.20 version into ulipad
                    
[2007/08/07]