@@ -3296,8 +3296,6 @@ import wx
 import locale
 import types
 from modules import Mixin
-from modules import common
-
 
 def message_init(win):
     wx.EVT_IDLE(win, win.OnIdle)
@@ -3316,9 +3314,11 @@ def message_init(win):
 
     win.editpoint = 0
     win.writeposition = 0
+    win.callback = None
 Mixin.setPlugin('messagewindow', 'init', message_init)
 
-def RunCommand(win, command, redirect=True, hide=False, input_decorator=None):
+def RunCommand(win, command, redirect=True, hide=False, input_decorator=None,
+        callback=None):
     """replace $file = current document filename"""
     global input_appendtext
     if input_decorator:
@@ -3330,6 +3330,7 @@ def RunCommand(win, command, redirect=True, hide=False, input_decorator=None):
         win.panel.showPage(tr('Message'))
         win.callplugin('start_run', win, win.messagewindow)
         win.messagewindow.SetReadOnly(0)
+        win.messagewindow.callback = callback
         appendtext(win.messagewindow, '> ' + command + '\n')
 
         win.messagewindow.editpoint = 0
@@ -3455,6 +3456,8 @@ def OnProcessEnded(win, event):
         win.messagewindow.errorstream = None
         win.messagewindow.pid = -1
         win.SetStatusText(tr("Finished! "), 0)
+        if win.messagewindow.callback:
+            wx.CallAfter(win.messagewindow.callback)
 Mixin.setMixin('mainframe', 'OnProcessEnded', OnProcessEnded)
 
 def appendtext(win, text):
