@@ -20,13 +20,22 @@
 #   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 #   $Id$
+#   Update:
+#   2008/08/25
+#       * Support Chinese filename, and auto adaptate the utf-8 encoding and local
+#         locale
+#       * When exporting, can test if the direction directory is already existed
+#       * Add refreshing current folder functionality after the svn command finished
 
 from modules import common
 import wx
 import os
+import re
 from modules import Globals
 from modules import Casing
 
+#commands definition
+################################################################
 commands = {
     'update': 'update',
     'checkout':'checkout',
@@ -38,25 +47,12 @@ commands = {
     'delete':'delete',
     'revert':'revert',
     'diff':'diff',
-    'export':'export --force',
+    'export':'export',
     'status':'status',
 }
 
-def svn_input_decorator(func):
-    def _func(win, text):
-        import re
-        re_string = re.compile(r'\?\\(\d{3})', re.S|re.M|re.I)
-        def do_sub(m):
-            return chr(int(m.group(1)))
-        print type(text), text
-        text = unicode(re.sub(re_string,do_sub, text), 'utf-8')
-        return func(win, text)
-    return _func
-    
-def run_command(cmd):
-    wx.CallAfter(Globals.mainframe.RunCommand, cmd, redirect=True, hide=True, 
-        input_decorator=None)
-    
+#export functions
+################################################################
 def do(dirwin, command, *args):
     m = dirwin.mainframe
     vc_exe = m.pref.version_control_exe
@@ -74,7 +70,19 @@ def do(dirwin, command, *args):
         dirwin.pref.save()
         if not path:
             return
-        args = args + (os.path.join(path, os.path.basename(args[0])),)
+        export_path = os.path.join(path, os.path.basename(args[0]))
+        if os.path.exists(export_path):
+            dlg = wx.MessageDialog(dirwin, tr("The directory is existed, do you want to overwrite it?"), 
+                tr("Export"), wx.YES_NO|wx.ICON_QUESTION)
+            answer = dlg.ShowModal()
+            dlg.Destroy()
+            if answer != wx.ID_YES:
+                return
+            force = '--force'
+        else:
+            force = ''
+            
+        args = args + (force, export_path)
     elif command == 'checkout':
         args = check_dialog(dirwin)
     elif command == 'commit':
@@ -86,9 +94,42 @@ def do(dirwin, command, *args):
         newname = rename_dialog(dirwin, args[0])
         args = [args[0], newname]
     if not args: return
-    cmd = '"%s" %s %s' % (vc_exe, commands.get(command), ' '.join(args))
-    run_command(cmd)
+    cmd = u'"%s" %s %s' % (vc_exe, commands.get(command), u' '.join(args))
+    run_command(cmd, dirwin.OnRefresh)
 
+#common functions
+################################################################
+def convert_text(text):
+    re_string = re.compile(r'\?\\(\d{3})', re.S|re.M|re.I)
+    def do_sub(m):
+        return chr(int(m.group(1)))
+    if re_string.search(text):
+        text = unicode(re.sub(re_string,do_sub, text), 'utf-8')
+    else:
+        text = common.decode_string(text, common.defaultfilesystemencoding)
+    return text
+    
+def svn_input_decorator(func):
+    def _func(win, text):
+        text = convert_text(text)
+        return func(win, text)
+    return _func
+    
+def run_command(cmd, callback=None):
+    wx.CallAfter(Globals.mainframe.RunCommand, cmd, redirect=True, hide=True, 
+        input_decorator=svn_input_decorator, callback=callback)
+        
+def pipe_command(cmd, callback):
+    def _run(cmd):
+        o = os.popen(cmd)
+        text = convert_text(o.read())
+        if callback:
+            callback(text)
+    d = Casing.Casing(_run, cmd)
+    d.start_thread()
+  
+#dialogs
+################################################################
 def get_path(path=''):
     if not path:
         path = os.getcwd()
@@ -156,8 +197,9 @@ class CommitDialog(wx.Dialog):
         self.text = wx.TextCtrl(self, -1, '', style=wx.TE_MULTILINE)
         box.Add(self.text, 1, wx.EXPAND|wx.ALL, 5)
         self.filenames = CheckList.CheckList(self, columns=[
-                (tr("File"), 430, 'left'),
-                (tr("Status"), 130, 'left'),
+                (tr("File"), 410, 'left'),
+                (tr("Extension"), 80, 'left'),
+                (tr("Status"), 100, 'left'),
                 ], style=wx.LC_REPORT | wx.SUNKEN_BORDER)
         
         box.Add(self.filenames, 2, wx.ALL|wx.EXPAND, 5)
@@ -172,8 +214,7 @@ class CommitDialog(wx.Dialog):
         self.SetSizer(box)
         self.SetAutoLayout(True)
         
-        d = Casing.Casing(self.init)
-        wx.CallAfter(d.start_thread)
+        wx.CallAfter(self.init)
 
     def GetValue(self):
         add_files = []
@@ -188,35 +229,36 @@ class CommitDialog(wx.Dialog):
                 add_files.append(filename)
         if add_files:
             vc_exe = Globals.mainframe.pref.version_control_exe
-            cmd_add = '"%s" add %s' % (vc_exe, ' '.join(add_files))
+            cmd_add = u'"%s" add %s' % (vc_exe, u' '.join(add_files))
             run_command(cmd_add)
         return ['-m "%s"' % self.text.GetValue()] + add_files + files
 
     def init(self):
-        status = {
-            '?': tr('non-versioned'),
-            'M': tr('modified'),
-            'A': tr('added'),
-            'D': tr('deleted'),
-        }
-        cmd = '"%s" status %s' % (self.parent.pref.version_control_exe, self.files)
-        path = os.path.dirname(self.files)
-        o = os.popen(cmd)
-        def f():
+        def _callback(text):
+            status = {
+                '?': tr('non-versioned'),
+                'M': tr('modified'),
+                'A': tr('added'),
+                'D': tr('deleted'),
+            }
+            path = os.path.dirname(self.files)
             i = 0
-            for line in o:
+            for line in text.splitlines():
+                wx.SafeYield()
                 line = line.strip()
                 if not line: continue
-                filename = line[7:]
+                filename = common.decode_string(line[7:], common.defaultfilesystemencoding)
+                ext = os.path.splitext(filename)[1]
                 if line[0] == '?':
                     if self.filetype == 'all':
-                        index = self.filenames.addline([filename[1+len(path):], status.get(line[0], '')], False)
+                        index = self.filenames.addline([filename[1+len(path):], ext, status.get(line[0], '')], False)
                         self.fileinfos[self.filenames.GetItemData(index)] = (filename, False)
                 else:
-                    index = self.filenames.insertline(i, [filename[1+len(path):], status.get(line[0], '')], True)
+                    index = self.filenames.insertline(i, [filename[1+len(path):], ext, status.get(line[0], '')], True)
                     self.fileinfos[self.filenames.GetItemData(index)] = (filename, True)
                     i += 1
-        wx.CallAfter(f)
+        cmd = '"%s" status %s' % (self.parent.pref.version_control_exe, self.files)
+        pipe_command(cmd, _callback)
         
 class RevertDialog(CommitDialog):
     filetype = 'm'
@@ -243,8 +285,7 @@ class RevertDialog(CommitDialog):
         self.SetSizer(box)
         self.SetAutoLayout(True)
         
-        d = Casing.Casing(self.init)
-        wx.CallAfter(d.start_thread)
+        wx.CallAfter(self.init)
 
     def GetValue(self):
         files = []
